2014-08-27  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj: 

2014-08-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DRouterObject.cpp: 

2014-08-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp:
	* Generator.h:
	* Generator.cpp:
	* X3DPrototypeInstance.cpp: 

2014-08-24  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp: 

2014-08-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Layout.cpp:
	* OrthoViewpoint.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* ExternProtoDeclaration.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Shader.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Shader.h:
	* Shader.cpp:
	* ShaderPart.cpp:
	* ShaderProgram.cpp: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBase.h:
	* Parser.h:
	* Traverse.h:
	* X3DInput.h:
	* World.h:
	* X3DBrowser.h:
	* SceneLoader.h:
	* Loader.h:
	* X3DPtrArray.h:
	* X3DArrayField.h:
	* X3DBaseNode.cpp:
	* Loader.cpp:
	* SceneLoader.cpp:
	* X3DBrowser.cpp:
	* Notification.cpp:
	* X3DNode.h:
	* X3DFieldDefinition.h:
	* X3DToolObject.h:
	* InlineTool.h:
	* GeoLOD.h:
	* Inline.h:
	* RenderingProperties.cpp:
	* X3DExecutionContext.h:
	* GeoLOD.cpp:
	* Inline.cpp:
	* X3DExecutionContext.cpp:
	* ExternProtoDeclaration.h:
	* jsBrowser.h:
	* GeoOrigin.cpp:
	* jsX3DScene.h:
	* ExternProtoDeclaration.cpp:
	* jsBrowser.cpp:
	* X3DPrototypeInstance.cpp:
	* X3DNetworkingContext.h:
	* X3DViewpointNode.cpp:
	* jsSFNode.cpp:
	* X3DGeospatialObject.h:
	* X3DGeospatialObject.cpp:
	* jsX3DExecutionContext.cpp: 

2014-08-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* Loader.cpp:
	* X3DExecutionContext.h:
	* Script.cpp:
	* X3DExecutionContext.cpp: 

2014-08-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Loader.cpp: 

2014-08-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Browser.cpp: 

2014-08-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Selection.h:
	* Browser.cpp:
	* Selection.cpp: